Current work: Credits updated and Misc changes
- Added Myself and Yutamon to the credits
-Changed the First 40 screen to return to credits ( was freeplay )

--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,4 @@ export/*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.haxelib/discord_rpc/git/
-.haxelib/linc_luajit/git/
-.haxelib/hxCodec/git/
-.haxelib/lime/discord_rpc/git/
-.haxelib/lime/hxCodec/git/
-.haxelib/lime/linc_luajit/git/
+.haxelib
